keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra
  namespace: infra
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - keycloak.lowjungxuan.dpdns.org
      secretName: infra-tls
  rules:
    - host: keycloak.lowjungxuan.dpdns.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: keycloak
                port:
                  number: 80
